# map-game

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/scenarios/: ww2_1939.json
src-tauri/src/: advisor.rs  context.rs  db.rs  main.rs
src-tauri/src/game/: country.rs  diplomacy.rs  economy.rs  mod.rs  state.rs  war.rs
src-tauri/src/llm/: mod.rs  ollama.rs  openai.rs  provider.rs
src-tauri/src/tools/: definitions.rs  executors.rs  mod.rs
src/components/: AdvisorPanel.tsx  Chatbox.tsx  CommandInput.tsx  CountrySelector.tsx  Map.tsx  SettingsPanel.tsx  StatusBar.tsx  WarPanel.tsx
src/stores/: gameStore.ts
src/types/: index.ts
src/utils/: api.ts  mapUtils.ts
